Complete the figure for maximal rectangle

--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,8 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{bm}
+\usepackage{graphicx}
+\graphicspath{ {images/} }
 
 \title{LeetCode Write-Up}
 \author{Bicheng Luo}
