--- a/dynamic_programming.tex
+++ b/dynamic_programming.tex
@@ -160,8 +160,15 @@ L(i,j)=i_{min}\\
 R(i,j)=i_{max}
 \end{cases}
 \end{equation*}
-$H(i,j),L(i,j),R(i,j)$ indicates $3$ properties of the largest rectangle in which $m[i][j]$ lies. Figure gave an explanation of these properties.
+$H(i,j),L(i,j),R(i,j)$ indicates $3$ properties of the largest rectangle in which $m[i][j]$ lies. Figure \ref{fig:maximal_rectangle} gave an explanation of these properties.
 $\bm{l}(i,j),\bm{r}(i,j)$ denotes the left and right index of the largest contiguous subarray, where $m[i][j]$ lies and which contains all 1's.
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=8cm]{maximal_rectangle}
+    \caption{The grey area denotes the all 1's area; the orange cube denotes $m[i][j]$; the blue rectangle denotes the largest rectangle in which $m[i][j]$ lies. $H(i,j)$ denotes the distance between the top of the rectangle and $m[i][j]$; $L(i,j)$ denotes the left index of the rectangle; $R(i,j)$ denotes the right index of the rectangle.}
+    \label{fig:maximal_rectangle}
+\end{figure}
+
 \subsection{96. Unique Binary Search Trees}
 
 \paragraph{Description}
