--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage{bm}
 \usepackage{graphicx}
 \graphicspath{ {images/} }
+\usepackage{minted}
 
 \title{LeetCode Write-Up}
 \author{Bicheng Luo}
@@ -15,7 +16,7 @@
 \maketitle
 
 \input{dynamic_programming}
-
+\input{math}
 
 
 \end{document}
