--- a/main.tex
+++ b/main.tex
@@ -7,16 +7,21 @@
 \graphicspath{ {images/} }
 \usepackage{minted}
 
-\title{LeetCode Write-Up}
+\title{LeetCode Write-Up \\(\textbf{Highly Frequent} Problems)}
 \author{Bicheng Luo}
 \date{April 2017}
 
 \begin{document}
 
 \maketitle
+\pagebreak
+
+\tableofcontents
+\pagebreak
 
 \input{dynamic_programming}
 \input{math}
-
+\input{hash_table}
+\input{tree}
 
 \end{document}
