Add the chapter for tree

--- a/dynamic_programming.tex
+++ b/dynamic_programming.tex
@@ -100,7 +100,7 @@ The matching should cover the entire input string (not partial).
 
 \underline{Code Hints}:
 \begin{itemize}
-    \item Use \mint{cpp}|vector<vector<T>> dp(rows, vector<T>(cols, init))| to initialize a 2D array.
+    \item Use \mintinline{cpp}{vector<vector<T>> dp(rows, vector<T>(cols, init))} to initialize a 2D array.
 \end{itemize}
 
 \begin{equation*}
