Add several problems on Backtracking

--- a/tree.tex
+++ b/tree.tex
@@ -10,6 +10,7 @@ The maximum depth is the number of nodes along the longest path from the root no
 
 \paragraph{Solution}
 
+\underline{Code Hints}:
 \begin{itemize}
     \item Calculate depth values for each node (or only leaf nodes), thus DFS (recursion or iteration) or BFS can both be valid.
     \item BFS and DFS for a tree does not require the existence check.
