--- a/hash_table.tex
+++ b/hash_table.tex
@@ -2,14 +2,13 @@
 
 \subsection{1. Two Sum}
 
-\paragraph{Description}
+\paragraph{\color{white} \colorbox{Mahogany}{Description}}
 
 Given an array of integers, return indices of the two numbers such that they add up to a specific target.
 
 You may assume that each input would have exactly one solution, and you may not use the same element twice.
 
-\paragraph{Solution}
-
+\paragraph{\color{white} \colorbox{OliveGreen}{Solution}}
 \underline{Code Hints}:
 \begin{itemize}
     \item Use \mintinline{cpp}{unordered_map<int, int> num_map} to generate a value-to-index mapping.
