--- a/tree.tex
+++ b/tree.tex
@@ -2,14 +2,12 @@
 
 \subsection{104. Maximum Depth of Binary Tree}
 
-\paragraph{Description}
-
+\paragraph{\color{white} \colorbox{Mahogany}{Description}}
 Given a binary tree, find its maximum depth.
 
 The maximum depth is the number of nodes along the longest path from the root node down to the farthest leaf node.
 
-\paragraph{Solution}
-
+\paragraph{\color{white} \colorbox{OliveGreen}{Solution}}
 \underline{Code Hints}:
 \begin{itemize}
     \item Calculate depth values for each node (or only leaf nodes), thus DFS (recursion or iteration) or BFS can both be valid.
@@ -19,14 +17,12 @@ The maximum depth is the number of nodes along the longest path from the root no
 
 \subsection{226. Invert Binary Tree}
 
-\paragraph{Description}
-
+\paragraph{\color{white} \colorbox{Mahogany}{Description}}
 Invert a binary tree.
 
 Google: 90\% of our engineers use the software you wrote (Homebrew), but you can’t invert a binary tree on a whiteboard so fuck off.
 
-\paragraph{Solution}
-
+\paragraph{\color{white} \colorbox{OliveGreen}{Solution}}
 \underline{Code Hints}:
 \begin{itemize}
     \item Swap left child and right child for each element of the tree, thus DFS (recursion or iteration) or BFS can both be valid.
