--- a/binary_search.tex
+++ b/binary_search.tex
@@ -2,12 +2,11 @@
 
 \subsection{4. Median of Two Sorted Arrays}
 
-\paragraph{Description}
+\paragraph{\color{white} \colorbox{Mahogany}{Description}}
 
 There are two sorted arrays nums1 and nums2 of size m and n respectively.
 
 Find the median of the two sorted arrays. The overall run time complexity should be $O(\log(m+n))$.
 
-\paragraph{Solution}
-
+\paragraph{\color{white} \colorbox{OliveGreen}{Solution}}
 tl;dr
