--- a/math.tex
+++ b/math.tex
@@ -2,14 +2,13 @@
 
 \subsection{2. Add Two Numbers}
 
-\paragraph{Description}
+\paragraph{\color{white} \colorbox{Mahogany}{Description}}
 
 You are given two non-empty linked lists representing two non-negative integers. The digits are stored in reverse order and each of their nodes contain a single digit. Add the two numbers and return it as a linked list.
 
 You may assume the two numbers do not contain any leading zero, except the number 0 itself.
 
-\paragraph{Solution}
-
+\paragraph{\color{white} \colorbox{OliveGreen}{Solution}}
 \underline{Code Hints}:
 \begin{itemize}
     \item Use dummy header to generate the result linked list.
@@ -38,13 +37,12 @@ ListNode* addTwoNumbers(ListNode* l1, ListNode* l2) {
 
 \subsection{13. Roman to Integer}
 
-\paragraph{Description}
-
+\paragraph{\color{white} \colorbox{Mahogany}{Description}}
 Given a roman numeral, convert it to an integer.
 
 Input is guaranteed to be within the range from 1 to 3999.
 
-\paragraph{Solution}
+\paragraph{\color{white} \colorbox{OliveGreen}{Solution}}
 \underline{Code Hints}:
 \begin{itemize}
     \item Use initializer list to initialize unordered\_map:\mint{cpp}|unordered_map<int, string> m2 = {{1, "foo"}, {3, "bar"}, {2, "baz"}};|
@@ -55,8 +53,7 @@ $s[i]$ denotes the $i^{th}$ character of the roman numeral string $s$. $m$ is us
 
 \subsection{258. Add Digits}
 
-\paragraph{Description}
-
+\paragraph{\color{white} \colorbox{Mahogany}{Description}}
 Given a non-negative integer num, repeatedly add all its digits until the result has only one digit.
 
 For example:
@@ -66,8 +63,7 @@ Given num = 38, the process is like: 3 + 8 = 11, 1 + 1 = 2. Since 2 has only one
 Follow up:
 Could you do it without any loop/recursion in $O(1)$ runtime?
 
-\paragraph{Solution}
-
+\paragraph{\color{white} \colorbox{OliveGreen}{Solution}}
 Digital Root Congruence Formula:
 $$0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9,\cdots$$
 $$dr(n)=1+((n - 1) \% 9)$$
