Add chapter for Stack

--- a/linked_list.tex
+++ b/linked_list.tex
@@ -30,3 +30,8 @@ $$R(l[1,\cdots])=\{R(l[2,\cdots]),l[1]\}$$
 where $R(l)$ denotes the reversed list of $l$, $l[i,\cdots]$ denotes a linked list which starts with the $i^{th}$ element of the list $l$.
 
 Iterative Method:
+
+\underline{Code Hints}:
+\begin{itemize}
+    \item Generate a new linked list does not require extra space sometimes.
+\end{itemize}
