Add two diagrams

--- a/bit_manipulation.tex
+++ b/bit_manipulation.tex
@@ -30,4 +30,4 @@ For example, the 32-bit integer `11' has binary representation
 00000000000000000000000000001011, so the function should return 3.
 
 \paragraph{\color{white} \colorbox{OliveGreen}{Solution}}
-$n\text{ Bitwise AND }(n-1)$ can take the last bit of `1' in $n$.
+$n\text{ Bitwise AND }(n-1)$ can take away the last bit of `1' in $n$.
