--- a/design.tex
+++ b/design.tex
@@ -18,3 +18,8 @@ Could you do both operations in O(1) time complexity?
     \item A linked list (use \mintinline{cpp}|ListNode| provided by LeetCode or \mintinline{cpp}|std::list<int>::iterator|) to store keys in LRU order.
     \item A map to find values and their positions in the linked list by keys.
 \end{itemize}
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=13cm]{lru_cache}
+    \label{fig:lru_cache}
+\end{figure}
